# rivallo

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  turbo.json  vitest.config.mjs
.impeccable/: config.json
.planning/: CAREER-LIFECYCLE.md  COACH-CREATOR-CONTRACT.md  COMPETITION-CALENDAR-ARCHITECTURE.md  DATABASE-AND-MODDING-FOUNDATION.md  HOME-COMMAND-CENTER.md  INBOX-EVENT-CONTRACT.md  MATCH-ENGINE-BOUNDARIES.md  MVP-1-DEFINITION.md  MVP-2-DEFINITION.md  MVP-GATE-CHECKLIST.md  PHASE-DEPENDENCY-GRAPH.md  PRIVATE-DEV-DATABASE-POLICY.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  ROUTE-READINESS-MATRIX.md  SIDEBAR-AND-MAIN-MENU-CONTRACT.md  SPORTS-MANAGEMENT-EVOLUTION.md  STATE.md  config.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  runtime_paths.rs
browser-tests/: creator-studio-uat.spec.ts  matchday.spec.ts  ui-lab.spec.ts
contracts/: openapi.json
crates/platform/: Cargo.toml
crates/platform/src/: career.rs  evaluations.rs  lib.rs  matchday.rs  profiles.rs  runtime.rs  table_view.rs  world.rs
crates/platform/src/persistence/: mod.rs  sqlite.rs
scripts/: build-desktop.mjs  check-rust-quality.mjs  check-toolchains.mjs  generate-contract-client.mjs  generate-design-tokens.mjs  generate-openapi.mjs  run-creator-studio-uat.mjs  run-quality.mjs  verify-cargo-architecture.mjs  verify-cargo-workspace.mjs  verify-clean-worktree.mjs  verify-contract-client-drift.mjs  verify-design-token-drift.mjs  verify-openapi-drift.mjs  verify-phase-5-package-approval.mjs  verify-phase-5-visual-review.mjs  verify-public-data-packages.mjs
tooling-tests/: check-toolchains.test.mjs  contracts-client-generation.test.mjs  design-tokens.test.mjs  evaluation-layer-foundation.test.mjs  openapi-pipeline.test.mjs  (+16 more)
(+366 files in other folders)
