[package]
name = "rivallo-platform"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "export-openapi"
path = "src/bin/export_openapi.rs"

[dependencies]
axum = { version = "=0.8.9", default-features = false, features = ["http1", "json", "tokio"] }
rivallo-application = { path = "../application" }
rivallo-contracts = { path = "../contracts" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tokio = { version = "=1.52.3", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
utoipa = { version = "5.5.0", features = ["macros"] }
