[package]
name = "rivallo-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-shell = "=2.3.5"
rivallo-platform = { path = "../../../crates/platform" }
